scrollbar solved

--- a/T05 Toogle Sidebar.css
+++ b/T05 Toogle Sidebar.css
@@ -5,10 +5,12 @@ body{
     margin: 0px;
     padding: 0px;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 aside{
     width: 25%;
-    height: 100%;
+    flex: 1;
     background-color: grey;
     display: flex;
     flex-direction: column;
